tests/dataset/tpc-ds/compiler/pl/q59.error
run: exit status 2
[]
ERROR: /tmp/q59.pl:24: user:main Unknown message: error('expect failed')
